--- a/3-Incidence.qmd
+++ b/3-Incidence.qmd
@@ -25,9 +25,9 @@ editor: visual
 
 Non-typhoidal strains of Salmonella (NTS) are an important cause of enterocolitis, with an estimated disease burden of 95 million cases in 2017, but with a low case-fatality rate [@stanaway_global_2019-1]. However, non-typhoidal salmonella can cause serious life-threatening disease through invasion of the bloodstream, meninges and other normally sterile sites, a high case-fatality rate (14·7%) [@marchello_incidence_2021]. Invasive non-typhoidal salmonella (iNTS) often presents with a non-specific febrile illness, and diagnosis can only be made on microbiological culture [@feasey_invasive_2012-1]. Invasive disease is predominantly seen in HIV-infected adults and children under 5 years with malaria, malnutrition and anaemia [@feasey_invasive_2012-1], in sub-Saharan Africa [@marchello_incidence_2021]. The serovar Salmonella Typhimurium has been found to account for 77%, and Salmonella Enteritidis for 17% globally of NTS invasive infections on a recent systematic review [@marchello_incidence_2021], with a range of other serovars accounting for the remainder.
 
-Data from the Global Burden of Diseases Study 2017 [@stanaway_global_2019-1] showed the highest incidence of iNTS disease globally was in children under 5 years 34·3 (23·2 to 54·7) per 100,000, reaching up to 150 (110-230) (ask Jeff Stanaway for numbers from figures) cases per 100,000 population in neonates and infants (postneonates??) in sub-Saharan Africa.
+Data from the Global Burden of Diseases Study 2017 [@stanaway_global_2019-1] showed the highest incidence of iNTS disease globally was in children under 5 years 34·3 (23·2 to 54·7) per 100,000, reaching up to 150 (110-230) (ask Jeff Stanaway for numbers from figures) cases per 100,000 population in neonates and infants in sub-Saharan Africa. Antimicrobial resistance (AMR) of NTS isolates is high (75%) in all sub-Saharan African (sSA) regions and resistance to third-generation cephalosporins in 5% of NTS isolates, in all sSA regions, since 2010 [@tack2020].
 
-The World Health Organization (WHO) recognises iNTS as a top-10 vaccine priority for Africa. Up-to-date incidence data is key to inform WHO policy and vaccine development consortiums. Understanding the age-distribution of iNTS disease incidence is key to inform vaccine strategies, particularly the role of targeted vaccines for high risk groups such as neonates and maternal iNTS vaccines. However, due to changes in epidemiology of NTS and host risk factors resulting from public health measures such as roll out of anti-retroviral therapy (ART) , malaria control programs and community feeding programs [@feasey_modelling_2015] with differing impacts on iNTS incidence in adults compared to children, it is important to have up-to-date granular age-stratified data on the age-distributions of iNTS incidence. Incidence data broken down by age-group within the under 5 age-group has not been well documented in the literature.
+The World Health Organization (WHO) recognises iNTS as a top-10 vaccine priority for Africa. Up-to-date incidence data is key to inform WHO policy and vaccine development consortiums. Understanding the age-distribution of iNTS disease incidence is key to inform vaccine strategies, particularly the role of targeted vaccines for high risk groups such as neonates and maternal iNTS vaccines. However, due to changes in epidemiology of NTS and host risk factors resulting from public health measures such as roll out of anti-retroviral therapy (ART) , malaria control programs and community feeding programs [@feasey_modelling_2015, @harris2019, @gordon_epidemics_2008] with differing impacts on iNTS incidence in adults compared to children, it is important to have up-to-date granular age-stratified data on the age-distributions of iNTS incidence. Incidence data broken down by age-group within the under 5 age-group has not been well documented in the literature.
 
 The Queen Elizabeth Central Hospital (QECH)/ Malawi-Liverpool Wellcome (MLW) Research Program has been collecting blood culture data since 1996. It has one of the largest blood culture databases in sub-Saharan Africa. Previous data from Malawi has shown that iNTS disease peaked in Malawi in 2002 reaching epidemic incidence of 242 cases per 100,000 population [@feasey_three_2015], and has been steadiliy declining to 6.9 per 100,000 in 2019 [@wilson_incidence_2022]. However, the changing distribution by age over time was not explored in this paper. It is key to inform understanding local, national and international iNTS vaccine development and policy. This article presents updated iNTS age-stratified incidence data from Queen Elizabeth Central Hospital, Blantyre, Malawi over a 22 year period from 1998-2024.
 
@@ -39,27 +39,27 @@ We retrospectively collected data on culture confirmed iNTS disease, age and ant
 
 #### Population denominators
 
-For the Blantyre district were interpolated from national population census data collected in 1998, 2008, and 2018 (NSO). Neonatal denominators\*\* back-calculated using national estimates on neonatal death rates?
+For the Blantyre district were interpolated from national population census data collected in 1998, 2008, and 2018 (NSO).
 
 #### Blood culture data
 
-Since 1998, the Malawi Liverpool Wellcome (MLW) Trust Programme has provided a standard, routine blood culture service to patients presenting with febrile illness at the largest tertiary health care facility, Queen Elizabeth Central Hospital (QECH), in Blantyre, Malawi. Enhanced community blood culture surveillance is also ongoing in two sites for the TyVAC) clinical trial (13) within Blantyre. Non-typhoidal salmonella blood and CSF (cerebrospinal fluid) culture surveillance at QECH continued uninterrupted through all four waves of COVID-19, however, blood culture activities in the TyVAC study were suspended during the first wave (14). We utilised the electronic records of all paediatric (0-14 years) blood cultures collected between January 1996 - May 2024 to obtain all salmonella positive blood cultures and total cultures collected, using the Laboratory Information Management Systems (LIMS) platform at QECH/ MLW. Data on location of collection of blood culture was patchy and not reliable.
+Since 1998, the Malawi Liverpool Wellcome (MLW) Research Programme has provided a standard, routine blood culture service to patients presenting with febrile illness at the largest tertiary health care facility, Queen Elizabeth Central Hospital (QECH), in Blantyre, Malawi. Blood cultures are collected for adults with suspected sepsis or an axillary temperature \>37.5^o^C. Paediatric blood cultures are taken from febile children who have no parasitaemia on thick blood films or negative rapid diagnostic test, or from children with severe malaria and suspected secondary bacterial sepsis, or suspected sepsis regardless of fever or malaria diagnostic test result. Enhanced community blood culture surveillance was carried out during the STRATAA [@meiring_burden_2021] , and TyVAC clinical trial [@patel_safety_2021, @patel2024] within Blantyre. Non-typhoidal salmonella blood and CSF (cerebrospinal fluid) culture surveillance at QECH continued uninterrupted through all four waves of COVID-19, however, blood culture activities in the TyVAC study were suspended during the first wave [@patel2024].
 
 #### Laboratory methods
 
-Antimicrobial susceptibility testing was performed by disc diffusion using ampicillin, chloramphenicol, cotrimoxazole, cefpodoxime, and ciprofloxacin discs according to British Society of Antimicrobial Chemotherapy methods and breakpoints. Since 2009, isolates found to be resistant to ciprofloxacin or ceftriaxone by disc testing have had Etests (bioMérieux) performed \[17\]. Diminished ciprofloxacin susceptibility was classified on the basis of a minimum inhibitory concentration (MIC) between 0.06 mg/L and 1 mg/L) \[17\]. Isolates were described as “fully susceptible” if susceptible to these 5 antimicrobials and multidrug resistant (MDR) if resistant to ampicillin, cotrimoxazole, and chloramphenicol. Prior to October 2010, these data were entered into ledgers, then double-entered into a validated database. Since then, they have been directly entered into an electronic laboratory information management system. Resistance to first-line anti-microbials: Phenotypic MDR to three first-line antimicrobials (cotrimoxazole, ampicillin and chloramphenicol). Resistance to fluoroquinolones and third generation cephalosporins (3GC).
+Diagnostic microbiology was carried out at the MLW laboratories in Blanytre, Malawi, according to standard microbiological techniques \[\@cowanan1993\]. Blood cultures were collected into adult aerobic and paediatric anaerobic bottles (BACT/ALERT, Biomerieux), and analysed using automated systems. Cerebrospinal fluid (CSF) was cultured at 37.5oC on sheep blood (Oxoid, Category number: CMOO55) and chocolate agar (Oxoid, Category number: CMOO55) for 48 hours in a carbon dioxide incubator (LEEC incubator; Make/Model: GA 2000/2010). Gram-negative colonies were subcultured onto MacConkey (Oxoid, Category number: CM0007) and sheep blood agar. Biochemical profiles using API 20E or 10S were used to identify Salmonella, and serotyping was carried out using the White-Kauffman classification using polyvalent O and H, O4, O6, O7, O9, Hd, Hg, Hm and Vi antisera (Pro-Lab Diagnostics).
 
-Isolates were described as ‘fully susceptible’ if susceptible to these 5 antimicrobials (cotrimoxazole, ampicillin, chloramphenicol, cefpodoxime, ciprofloxacin) and multidrug resistant (MDR) if resistant to ampicillin, cotrimoxazole, and chloramphenicol. Laboratory data were routinely entered by the diagnostic microbiology service using the Prelink (Prelink V3.0.2429.0), laboratory information management system and data were stored on a secure Microsoft SQL Server database
+Disc diffusion using ampicillin, chloramphenicol, cotrimoxazole, cefpodoxime, and ciprofloxacin was used to determine antimicrobial susceptibility as described in \[\@wilson_incidence_2022, \@feasey_three_2015\]. Since 2009, isolates found to be resistant to ciprofloxacin or ceftriaxone by disc testing have had Etests (bioMérieux) performed. Fully susceptible isolates were defined as susceptiblity to ampicillin, chloramphenicol, cotrimoxazole, cefpodoxime, and ciprofloxacin and multidrug resistant (MDR) if resistant to ampicillin, cotrimoxazole, and chloramphenicol. Before October 2010, blood culture resulted were recorded by hand, then double-entered into a validated database. Following 2010, results have been directly entered into Prelink (Prelink V3.0.2429.0), laboratory information management system.
 
 ### Statistical methods
 
-Data analysis was conducted in the r statistical environment (15). Incidence was calculated using the sum of NTS positive blood and CSF cultures for a given year over the mid-year population estimate for that year.
+Data analysis was conducted in the r statistical environment [@r_core_team_r_2018]. Incidence was calculated using the sum of NTS positive blood and CSF cultures for a given year over the mid-year population estimate for that year.
 
 To estimate incidence for children under 5 years, we selected a negative binomial distribution to account for overdispersion, to model monthly counts of NTS cases as a function of age, with b-splines fitted for smoothing.
 
 Model 1:
 
-$$ log(cases) = ~ \alpha + \beta_{2}*bspline(age, df=8) + log(population) $$ Data smoothing using B-splines was implemented for the
+$$ log(cases) = ~ \alpha + \beta_{2}*bspline(age, df=8) + log(population) $$ Due to reporting bias for childrens ages (more likely to be reported nearest to the closest whole year), and the required granularity of data for incidence in the under 5 years, numbers for each year above the age of 12 months were redistributed equally across the 12 month age groups between each whole year of age.
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -193,6 +193,65 @@ inc_tab_long2 <- inc_tab_long %>%
 totals <- inc_tab_long2 %>% 
   summarise(across(where(is.numeric), ~ sum(.x, na.rm=T))) %>% 
   mutate(Year="Total")
+
+## Age stratifications
+age_gp <- master_1996_2024 %>% 
+  mutate(agebands = cut(Age_years, breaks = c(seq(0,55,5),65,75,90), labels=c("0-4", "5-9", "10-14", "15-19", "20-24", "25-29", "30-34", "35-39", "40-44", "45-49", "50-54", "55-64", "65-74", "75+")),
+         agebands_s = cut(Age_years, breaks = c(0,5,10,15,30,50,90)),
+         agebands_3 = cut(Age_years, breaks = c(0,15,45,90)),
+         agebands_m = cut(Age_years, breaks = c(0,5,10,15,30,40,50,60,75,90)),
+         YearBand = cut(Year, breaks = c(1995, 2005, 2015, 2024)),
+         YearBand = factor(YearBand, labels = c("1996-2004", "2005-2014", "2015-2024")),
+         YearBand2 = cut(Year, breaks = c(2010, 2015, 2020, 2024), labels = c("2010-2014","2015-2019","2020-2024")),
+         YearBand3 = cut(Year, breaks = c(seq(1995,2025,5)), labels = c("1996-2000","2001-2005","2006-2010","2011-2015","2016-2020","2021-2024")))
+
+alliNTSAgeYr <- age_gp %>% 
+  group_by(agebands_s, Year) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup() %>% 
+  mutate(agebands2 = case_when(
+    agebands_s=="(0,5]" ~ "x00_04", 
+    agebands_s=="(5,10]" ~ "x05_09", 
+    agebands_s=="(10,15]" ~ "x10_14", 
+    agebands_s=="(15,30]" ~ "x15_30", 
+    agebands_s=="(30,50]" ~ "x30_50", 
+    agebands_s=="(50,90]" ~ "x50_90"
+  )) %>% 
+  pivot_wider(id_cols = "Year", names_from = "agebands2", values_from = "Total_iNTS", names_glue = "{agebands2}_count") %>% 
+    left_join(Pop_wideAgeband) %>% 
+  mutate(Inc00_04 = x00_04_count/x00_04_pop*100000,
+         Inc05_09 = x05_09_count/x05_09_pop*100000,
+         Inc10_14 = x10_14_count/x10_14_pop*100000,
+         Inc15_30 = x15_30_count/x15_30_pop*100000,
+         Inc30_50 = x30_50_count/x30_50_pop*100000,
+         Inc50_90 = x50_90_count/x50_90_pop*100000,
+         Year = as.character(Year))
+
+####
+alliNTSAgey <- age_gp %>% 
+  group_by(agebands, YearBand) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup()
+
+alliNTSAge <- age_gp %>% 
+  group_by(agebands_3, Year) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup()
+
+alliNTSAgeSero <- age_gp %>% 
+  group_by(agebands, Organism) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup()
+
+alliNTSAgeSeroYr <- age_gp %>% 
+  group_by(agebands, Organism, YearBand) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup()
+
+alliNTSAgeSeroYr2 <- age_gp %>% 
+  group_by(agebands, Organism, YearBand3) %>% 
+  summarise(Total_iNTS = n()) %>% 
+  ungroup()
 ```
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
@@ -203,8 +262,8 @@ sum_stats <- data.frame(colSums(inc_tab_long2[,-1], na.rm=T)) %>% t() %>% data.f
 # iNTS_tot <- sum_stats$
 stdate <- min(master_1996_2024$sampledate, na.rm=T)
 endate <- max(master_1996_2024$sampledate, na.rm=T)
-startpop <- min(inc_tab_long2$`Population Census`, na.rm=T)
-endpop <- max(inc_tab_long2$`Population Census`, na.rm=T)
+startpop <- min(inc_tab_long2$`Population Raw`, na.rm=T)
+endpop <- max(inc_tab_long2$`Population Raw`, na.rm=T)
 startyr <- min(inc_tab_long2$Year, na.rm=T)
 endyr <- max(inc_tab_long2$Year, na.rm=T)
 lowinc <- min(inc_tab_long2$`Minimum Incidence`,na.rm=T)
@@ -215,6 +274,9 @@ lowyr <- inc_tab_long2 %>%
 hiyr <- inc_tab_long2 %>% 
   slice_max(order_by = `Minimum Incidence`, n=1) %>% 
   dplyr::select(Year)
+tot_missAge <- alliNTSAge %>% 
+  filter(is.na(agebands_3)) %>% 
+  summarise(n())
 ```
 
 <!-- (`r run_reference(id = "tbl-flextable")`.)  -->
@@ -228,8 +290,7 @@ hiyr <- inc_tab_long2 %>%
 \recalctypearea
 ```
 ```{r echo=FALSE, warning=FALSE, ft.align = "centre", ft.width = 7, out.width = "7.5in"}
-#| echo: false
-#| label: tbl-flextable
+#| label: tbl-subtab
 #| tbl-cap: Non-Typhoidal Salmonella blood culture isolates from Queen Elizabeth Central Hospital (QECH), 1996-2024
 
 inc_tab_long3 <- inc_tab_long2 %>%
@@ -285,8 +346,6 @@ doc <- body_add_flextable(doc, value = inc_tab_longFT, align = "left")
 
 <!-- table 1 @ref(tab:incidencetab1) -->
 
-Need CSF table!!!
-
 \newpage
 
 <!-- % changing the orientation to portrait again -------------------------- -->
@@ -297,7 +356,7 @@ Need CSF table!!!
 ```
 ## Results
 
-Data on NTS blood and CSF cultures was available from `{r} print(stdate)` to `{r} print(endate)`. During this period there were `{r} as.integer(sum_stats$total)` cases of iNTS, including `{r} sum_stats$salmonella_typhimurium` S.typhimurium, `{r} sum_stats$salmonella_enteritidis` S.enteritidis, and `{r} sum_stats$salmonella_species` S.species (@tbl-flextable.). Data was available on total number of blood cultures collected from 1998-01-01 to 2022-05-01. The total Blantyre population was `{r} print(prettyNum(as.integer(startpop),big.mark=","))` in `{r} print(startyr)` and `{r} print(prettyNum(as.integer(endpop),big.mark=","))` in `{r} print(endyr)`. During this period, the minimum incidence of blood culture confirmed iNTS ranged from `{r} print(lowinc)` in `{r} print(lowyr$Year)` to `{r} print(hiinc)` in `{r} print(hiyr$Year)` per 100,000 population (@tbl-flextable., @fig-1.).
+Data on NTS blood and CSF cultures was available from `{r} print(stdate)` to `{r} print(endate)`. During this period there were `{r} print(prettyNum(as.integer(sum_stats$total), big.mark=","))` cases of iNTS, including `{r} print(prettyNum(sum_stats$salmonella_typhimurium,big.mark=","))` S.typhimurium, `{r}print(prettyNum(sum_stats$salmonella_enteritidis,big.mark=","))` S.enteritidis, and `{r} sum_stats$salmonella_species` S.species (@tbl-flextable). Data was missing for a total of `{r} tot_missAge` NTS isolates. Data was available on total number of blood cultures collected from 1998-01-01 to 2022-05-01. The total Blantyre population was `{r} print(prettyNum(as.integer(startpop),big.mark=","))` in `{r} print(startyr)` and `{r} print(prettyNum(as.integer(endpop),big.mark=","))` in `{r} print(endyr)`. During this period, the minimum incidence of blood culture confirmed iNTS ranged from `{r} print(lowinc)` in `{r} print(lowyr$Year)` to `{r} print(hiinc)` in `{r} print(hiyr$Year)` per 100,000 population (@tbl-sumtab, @fig-NoPeriod).
 
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 # fig.height = 5, fig.width = 5.5, out.width = "6in"
@@ -305,39 +364,6 @@ Data on NTS blood and CSF cultures was available from `{r} print(stdate)` to `{r
 #| fig-width: !expr size_list$fig_width
 ##### Age Band stratification
 ##### Age Band stratification
-age_gp <- master_1996_2024 %>% 
-  mutate(agebands = cut(Age_years, breaks = c(seq(0,55,5),65,75,90), labels=c("0-4", "5-9", "10-14", "15-19", "20-24", "25-29", "30-34", "35-39", "40-44", "45-49", "50-54", "55-64", "65-74", "75+")),
-         agebands_s = cut(Age_years, breaks = c(0,5,10,15,30,50,90)),
-         agebands_3 = cut(Age_years, breaks = c(0,15,45,90)),
-         agebands_m = cut(Age_years, breaks = c(0,5,10,15,30,40,50,60,75,90)),
-         YearBand = cut(Year, breaks = c(1995, 2005, 2015, 2024)),
-         YearBand = factor(YearBand, labels = c("1996-2004", "2005-2014", "2015-2024")),
-         YearBand2 = cut(Year, breaks = c(2010, 2015, 2020, 2024), labels = c("2010-2014","2015-2019","2020-2024")),
-         YearBand3 = cut(Year, breaks = c(seq(1995,2025,5)), labels = c("1996-2000","2001-2005","2006-2010","2011-2015","2016-2020","2021-2024")))
-
-
-alliNTSAgeYr <- age_gp %>% 
-  group_by(agebands_s, Year) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup() %>% 
-  mutate(agebands2 = case_when(
-    agebands_s=="(0,5]" ~ "x00_04", 
-    agebands_s=="(5,10]" ~ "x05_09", 
-    agebands_s=="(10,15]" ~ "x10_14", 
-    agebands_s=="(15,30]" ~ "x15_30", 
-    agebands_s=="(30,50]" ~ "x30_50", 
-    agebands_s=="(50,90]" ~ "x50_90"
-  )) %>% 
-  pivot_wider(id_cols = "Year", names_from = "agebands2", values_from = "Total_iNTS", names_glue = "{agebands2}_count") %>% 
-    left_join(Pop_wideAgeband) %>% 
-  mutate(Inc00_04 = x00_04_count/x00_04_pop*100000,
-         Inc05_09 = x05_09_count/x05_09_pop*100000,
-         Inc10_14 = x10_14_count/x10_14_pop*100000,
-         Inc15_30 = x15_30_count/x15_30_pop*100000,
-         Inc30_50 = x30_50_count/x30_50_pop*100000,
-         Inc50_90 = x50_90_count/x50_90_pop*100000,
-         Year = as.character(Year))
-
 alliNTSAgeYrFT <- flextable(alliNTSAgeYr)
 alliNTSAgeYrFT <- set_table_properties(alliNTSAgeYrFT, layout = "autofit") %>% 
   fontsize(size=8, part = "body") %>% 
@@ -351,9 +377,8 @@ doc <- body_add_flextable(doc, value = alliNTSAgeYrFT, align = "left")
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-1
-#| fig-cap: Number of Non-Typhoidal Salmonella blood culture isolates from Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
+#| label: fig-NoPeriod
+#| fig-cap: Number of Non-Typhoidal Salmonella blood culture isolates by time period and by serovar at Queen Elizabeth Central Hospital (QECH), 1996-2024
 #| 
 p96_15 <- age_gp %>% 
   filter(Year<2016) %>% 
@@ -390,31 +415,6 @@ p10_24 <- age_gp %>%
         axis.text.x = element_text(face = "plain", size = 6, vjust = 0.5),
         legend.text = element_text(face = "plain", size = 6),
         legend.title = element_text(face = "bold", size = 8))
-
-alliNTSAgey <- age_gp %>% 
-  group_by(agebands, YearBand) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup()
-
-alliNTSAge <- age_gp %>% 
-  group_by(agebands_3, Year) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup()
-
-alliNTSAgeSero <- age_gp %>% 
-  group_by(agebands, Organism) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup()
-
-alliNTSAgeSeroYr <- age_gp %>% 
-  group_by(agebands, Organism, YearBand) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup()
-
-alliNTSAgeSeroYr2 <- age_gp %>% 
-  group_by(agebands, Organism, YearBand3) %>% 
-  summarise(Total_iNTS = n()) %>% 
-  ungroup()
 
 
 porg <- alliNTSAgeSero %>% 
@@ -454,25 +454,8 @@ cowplot::plot_grid(pAge, p96_15,p10_24,porg)
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-2
-#| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
-#| 
-ggplot(inc_tab_long2, aes(x=Year, y=`Minimum Incidence`))+
-  geom_point()+
-  geom_line()+
-  # ggtitle("Minimum Incidence iNTS (BC) by year, QECH, Blanytre")+
-  ylab("Incidence per 100,000 population")+
-  theme_bw()+
-  theme(axis.text.x = element_text(size=6,angle = 45))
-```
-
-```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
-#| fig-height: !expr size_list$fig_height
-#| fig-width: !expr size_list$fig_width
-#| label: fig-3
+#| label: fig-IncAge
 #| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates by age group, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
 #| 
 inc_agband_long <- alliNTSAgeYr %>% 
   pivot_longer(cols = c(Inc00_04, Inc05_09, Inc10_14, Inc15_30, Inc30_50, Inc50_90), names_to = "Ageband", values_to = "Incidence") %>% 
@@ -493,9 +476,7 @@ ggplot(inc_agband_long, aes(x=Year, y=Incidence, group=Ageband, colour = Ageband
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-4
-#| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates in children aged 0-60 months, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
+#
 ### Incidence graphs in U5
 #### U5
 iNTS_all_U5 <- age_gp %>% 
@@ -563,24 +544,24 @@ iNTS_U5_1996_2024_sumYr2 <- iNTS_U5_1996_2024_sumYr2 %>%
          count_adj = ifelse(ageyrs<1, count, count_adj),
          risk = count_adj/(pop/12)*100000)
 
-ggplot(iNTS_U5_1996_2024_sumYr2, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
-  geom_line()+
-  ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
-  ylab("Incidence per 100,000 population")+
-  theme_bw() +
-  theme(axis.text.x = element_text(size=6,angle = 45))
+# ggplot(iNTS_U5_1996_2024_sumYr2, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
+#   geom_line()+
+#   ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
+#   ylab("Incidence per 100,000 population")+
+#   theme_bw() +
+#   theme(axis.text.x = element_text(size=6,angle = 45))
 
 ## Combine granular months U5 to other agebands
 allageYrB3 <- iNTS_U5_1996_2024_sumYr2 %>% 
   bind_rows(iNTS_allage_sumyr)
   
-ggplot(allageYrB3, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
-  geom_line()+
-  ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
-  ylab("Incidence per 100,000 population")+
-  coord_cartesian(ylim = c(0,5000))+
-  theme_bw() +
-  theme(axis.text.x = element_text(size=6,angle = 45))
+# ggplot(allageYrB3, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
+#   geom_line()+
+#   ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
+#   ylab("Incidence per 100,000 population")+
+#   coord_cartesian(ylim = c(0,5000))+
+#   theme_bw() +
+#   theme(axis.text.x = element_text(size=6,angle = 45))
 
 iNTS_U5_1996_2024_sumOrg <- iNTS_all_U5 %>% 
   mutate(agemth_rnd = round(Age_months, digits=0)) %>% 
@@ -591,27 +572,27 @@ iNTS_U5_1996_2024_sumOrg <- iNTS_all_U5 %>%
   mutate(pop = 2401,
          risk = count/pop*100000)
 
-ggplot(iNTS_U5_1996_2024_sumOrg, aes(agemth_rnd, count, fill = Organism))+
-  geom_bar(stat="identity")+
-  xlab("Age")+
-  ylab("Count")+
-  theme_bw() +
-  theme(title = element_text(face = "bold", size=16),
-        axis.title = element_text(face= "bold" , size = 10),
-        axis.text = element_text(face = "plain", size = 10),
-        legend.text = element_text(face = "plain", size = 10),
-        legend.title = element_text(face="bold", size=10))
+# ggplot(iNTS_U5_1996_2024_sumOrg, aes(agemth_rnd, count, fill = Organism))+
+#   geom_bar(stat="identity")+
+#   xlab("Age")+
+#   ylab("Count")+
+#   theme_bw() +
+#   theme(title = element_text(face = "bold", size=16),
+#         axis.title = element_text(face= "bold" , size = 10),
+#         axis.text = element_text(face = "plain", size = 10),
+#         legend.text = element_text(face = "plain", size = 10),
+#         legend.title = element_text(face="bold", size=10))
 
 ## Combine granular months U5 to other agebands
 allageYrB3 <- iNTS_U5_1996_2024_sumYr2 %>% 
   bind_rows(iNTS_allage_sumyr)
   
-ggplot(allageYrB3, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
-  geom_line()+
-  ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
-  ylab("Incidence per 100,000 population")+
-  theme_bw() +
-  theme(axis.text.x = element_text(size=6,angle = 45))
+# ggplot(allageYrB3, aes(x=ageyrs, y=risk, group=YearBand, colour = YearBand))+
+#   geom_line()+
+#   ggtitle("Minimum Incidence iNTS (BC) by age, QECH, Blanytre")+
+#   ylab("Incidence per 100,000 population")+
+#   theme_bw() +
+#   theme(axis.text.x = element_text(size=6,angle = 45))
 
 ### Fit risk
 risk_predict <- function(df, name ){ #Switch, grp
@@ -683,17 +664,15 @@ plotfunc <- function(df,grp,name){
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-5
-#| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates in children aged 0-60 months by organism, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
+
 #| 
-## Subgroup by organism
+# Subgroup by organism
 STmRisk <- subgrp(iNTS_U5_1996_2024_sumOrg,iNTS_U5_1996_2024_sumOrg$Organism,"Typhimurium","STm")
 SEnRisk <- subgrp(iNTS_U5_1996_2024_sumOrg,iNTS_U5_1996_2024_sumOrg$Organism,"Enteritidis","SEn")
 SppRisk <- subgrp(iNTS_U5_1996_2024_sumOrg,iNTS_U5_1996_2024_sumOrg$Organism,"species","Spp")
 
 SalmAllOrgs <- bind_rows(STmRisk, SEnRisk, SppRisk)
-plotfunc(SalmAllOrgs,SalmAllOrgs$Organism,"Org")
+#plotfunc(SalmAllOrgs,SalmAllOrgs$Organism,"Org")
 
 
 ```
@@ -701,9 +680,6 @@ plotfunc(SalmAllOrgs,SalmAllOrgs$Organism,"Org")
 ```{r echo=FALSE, results='hide', warning=FALSE, message=FALSE, fig.align = "left"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-6
-#| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates in children aged 0-60 months by time period, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
 #| 
 ## Subgroup by YearBand
 Risk1996_2000 <- subgrp(iNTS_U5_1996_2024_sumYr,iNTS_U5_1996_2024_sumYr$YearBand3,"1996-2000","_1996_2000")
@@ -714,7 +690,7 @@ Risk2016_2020 <- subgrp(iNTS_U5_1996_2024_sumYr,iNTS_U5_1996_2024_sumYr$YearBand
 Risk2021_2024 <- subgrp(iNTS_U5_1996_2024_sumYr,iNTS_U5_1996_2024_sumYr$YearBand3,"2021-2024","_2021_2024")
 
 SalmAllYr <- bind_rows(Risk1996_2000, Risk2001_2005, Risk2006_2010,Risk2011_2015,Risk2016_2020,Risk2021_2024)
-plotfunc(SalmAllYr,SalmAllYr$YearBand3,"Yr")
+# plotfunc(SalmAllYr,SalmAllYr$YearBand3,"Yr")
 ```
 
 <!-- (`r run_reference(id = "tbl-flextable")`.)  -->
@@ -730,9 +706,8 @@ plotfunc(SalmAllYr,SalmAllYr$YearBand3,"Yr")
 ```{r echo=FALSE, warning=FALSE, ft.align = "centre", ft.width = 7, out.width = "7.5in"}
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-7
+#| label: fig-splineInc
 #| fig-cap: Minimum Incidence of Non-Typhoidal Salmonella blood culture isolates in children aged 0-60 months by time period, Queen Elizabeth Central Hospital (QECH), 1996-2024
-#| echo: false
 #| 
 SalmAllYr %>%
   ggplot() +
@@ -777,7 +752,7 @@ SalmAllYr %>%
 # fig.height = 5, fig.width = 5.5, out.width = "6in"
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-8
+#| label: fig-AMR
 #| fig-cap: Antimicrobial resistance in Non-Typhoidal Salmonella isolates in children at QECH, Blantyre. Isolates were described as ‘fully susceptible’ (S) if susceptible to these 5 antimicrobials (cotrimoxazole, ampicillin, chloramphenicol, cefpodoxime, ciprofloxacin) and resistant (R) if had resistance to 1 or 2 of these antimicrobials, and multidrug resistant (MDR) if resistant to ampicillin, cotrimoxazole, and chloramphenicol.
 
 ### AMR
@@ -913,66 +888,64 @@ CSF_BC %>%
 # fig.height = 5, fig.width = 5.5, out.width = "6in"
 #| fig-height: !expr size_list$fig_height
 #| fig-width: !expr size_list$fig_width
-#| label: fig-9
-#| fig-cap: Multidrug resistant (MDR) (resistant to ampicillin, cotrimoxazole, and chloramphenicol) trends over time by agegroup at QUECH, Blantyre (2010 - 2024)
-
-#### Plot trends over time
-AMR_paeds_sumyr <- AMR_paeds2 %>% 
-  group_by(ageband, year) %>% 
-  summarise(total = n(), 
-            MDR = sum(MDR, na.rm = T),
-            R = sum(R, na.rm = T),
-            R = R-MDR,
-            S = total-(MDR+R)) %>% 
-  filter(!is.na(ageband)) 
-
-AMR_paeds_sumyr %>% 
-  filter(!is.na(ageband) & ageband!="") %>% 
-    ggplot(aes(x=year, y=MDR, colour = ageband))+
-    geom_point()+
-    geom_line()+
-    xlab("Year") +
-    ylab("Total") +
-    guides(colour = guide_legend(title = "Age Band"))+
-    theme_bw()+
-    theme(axis.title = element_text(face= "bold" , size = 8),
-          axis.text = element_text(face = "plain", size = 6),
-          axis.text.x = element_text(face = "plain", size = 6, vjust = 0.5, angle=45),
-          legend.text = element_text(size = 6),
-          legend.title  = element_text(face = "bold", size = 8))
+#
+# #### Plot trends over time
+# AMR_paeds_sumyr <- AMR_paeds2 %>% 
+#   group_by(ageband, year) %>% 
+#   summarise(total = n(), 
+#             MDR = sum(MDR, na.rm = T),
+#             R = sum(R, na.rm = T),
+#             R = R-MDR,
+#             S = total-(MDR+R)) %>% 
+#   filter(!is.na(ageband)) 
+# 
+# AMR_paeds_sumyr %>% 
+#   filter(!is.na(ageband) & ageband!="") %>% 
+#     ggplot(aes(x=year, y=MDR, colour = ageband))+
+#     geom_point()+
+#     geom_line()+
+#     xlab("Year") +
+#     ylab("Total") +
+#     guides(colour = guide_legend(title = "Age Band"))+
+#     theme_bw()+
+#     theme(axis.title = element_text(face= "bold" , size = 8),
+#           axis.text = element_text(face = "plain", size = 6),
+#           axis.text.x = element_text(face = "plain", size = 6, vjust = 0.5, angle=45),
+#           legend.text = element_text(size = 6),
+#           legend.title  = element_text(face = "bold", size = 8))
 ```
 
 ![](images/clipboard-271940250.png)
 
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-| Country          |                  |   | Crude incidence,           |   | Adjusted incidence         |   |
-|                  |                  |   |                            |   |                            |   |
-|                  |                  |   | iNTS cases per 100,000 PYO |   | iNTS cases per 100,000 PYO |   |
-+==================+==================+===+============================+===+============================+===+
-| **Malawi**       |                  |   |                            |   |                            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Age 0-11 months  |   | 80 (22-205)                |   | n/a                        |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Age 12-23 months |   | 124 (45-269)               |   | n/a                        |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Age 24-35 months |   | 41 (1-156)                 |   | n/a                        |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Age 36-47 months |   | 18 (0-130)                 |   | n/a                        |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-| **Ghana**        |                  |   |                            |   |                            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Under 2 years    |   | 7.9                        |   | 82 (61 - 110)              |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | 2-4 years        |   | 11.0                       |   | 167 (124 - 219)            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-| **Burkina Faso** |                  |   |                            |   |                            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | Under 2 years    |   | 18.7                       |   | 339 (245 - 497)            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-|                  | 2-4 years        |   | 36.3                       |   | 605 (486 - 772)            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
-| Kenya (2014)     |                  |   |                            |   |                            |   |
-+------------------+------------------+---+----------------------------+---+----------------------------+---+
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+| Country          |                  |        | Crude incidence,           |        | Adjusted incidence         |        |
+|                  |                  |        |                            |        |                            |        |
+|                  |                  |        | iNTS cases per 100,000 PYO |        | iNTS cases per 100,000 PYO |        |
++==================+==================+========+============================+========+============================+========+
+| **Malawi**       |                  |        |                            |        |                            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Age 0-11 months  |        | 80 (22-205)                |        | n/a                        |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Age 12-23 months |        | 124 (45-269)               |        | n/a                        |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Age 24-35 months |        | 41 (1-156)                 |        | n/a                        |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Age 36-47 months |        | 18 (0-130)                 |        | n/a                        |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+| **Ghana**        |                  |        |                            |        |                            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Under 2 years    |        | 7.9                        |        | 82 (61 - 110)              |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | 2-4 years        |        | 11.0                       |        | 167 (124 - 219)            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+| **Burkina Faso** |                  |        |                            |        |                            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | Under 2 years    |        | 18.7                       |        | 339 (245 - 497)            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+|                  | 2-4 years        |        | 36.3                       |        | 605 (486 - 772)            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
+| Kenya (2014)     |                  |        |                            |        |                            |        |
++------------------+------------------+--------+----------------------------+--------+----------------------------+--------+
 
 : Crude and Adjusted incidence rates for iNTS disease in Malawi, Burkina Faso, and Kenya. The Malawi incidence was estimated from the community-based STRATAA study (Meiring et al, Lancet Infectious Disease 2021). The incidences from Ghana and Burkina Faso are estimated from the SEAP study (unpublished data, personal communication from investigators).
 
