--- a/6-serocatalytic.qmd
+++ b/6-serocatalytic.qmd
@@ -192,22 +192,229 @@ library(distributional)
 library(aida)
 library(rethinking)
 
+
+# ##load data
+# #data <- import(here("data","6_data", "sero_data_agegroup_mth.csv"))   ## serology data
+# Malawi <- import(here("data", "Malawi_STmIgG_master.csv"))
+# #rename(EU_all.sero = EU_all.sero)## serology data
+# Kenya <- import(here("data", "kenya_STmIgG_master.csv"))   ## serology data
+# BF <- import(here("data", "BF_STmIgG_master.csv"))   ## serology data
+# sites <- list(Malawi, Kenya, BF)
+# names(sites) <- c("Malawi", "Kenya", "BF")
+# site_name <- c("Malawi", "Kenya", "BF")
+# names(sites)
+# 
+# model_comp <- function(df, name){ 
+#     dataS <- df %>% 
+#       mutate(AGEGROUP_mth = cut(age_calc_months, breaks = seq(0,60,1)),
+#              AGE = age_calc_months) %>% 
+#       group_by(AGEGROUP_mth) %>%
+#       summarise(N=n(),
+#                 MIDAGE=mean(AGE, na.rm = T), ##keep the actual mean age of the groups
+#                 LPS_ME=mean(log(EU_all.sero),na.rm=T),
+#                 LPS_SD=sd(log(EU_all.sero),na.rm=T)) %>% 
+#       ungroup() %>% 
+#       arrange(MIDAGE)
+#     
+#     data3 <- data %>%
+#       group_by(AGEGROUP_3mth) %>%
+#       summarise(N=n(),
+#                 MIDAGE=mean(AGE, na.rm = T), ##keep the actual mean age of the groups
+#                 LPS_ME=mean(log(EU_all.sero),na.rm=T),
+#                 LPS_SD=sd(log(EU_all.sero),na.rm=T)) %>%
+#       ungroup() %>%
+#       arrange(MIDAGE)
+#     
+#     ## Set fixed parameters
+#     dataS$mx=1  # upper limit of new infections (cumulative) by age 60 months = 40 if 1 infection every 6 weeks on average across cohort - may need to adjust for age dist
+#     dataS$r=0.2 # exponential phase where enter high feco-oral transmission at weaning/ crawling age  
+#     dataS$w=3   # age in months before before enter exponential phase (x-axis displacement) - weaning 
+#     dataS$phi0<- max(log(data$EU_all.sero),na.rm=T) ##prior:: the max you may get from the data
+#     dataS$beta0<- 0.5 ##pri
+#     dataS$lambda0<- 0.11 ##prior
+#     
+#     # Model 1
+#     prior1 <- prior(normal(2.75,0.5), nlpar = "i") +
+#       prior(normal(1,0.5), nlpar = "k") +
+#       prior(normal(5,1), nlpar = "mab0")
+# 
+#     # Fit model using brms
+#     fit1 <- brms::brm(bf(LPS_ME ~ mab0*exp(-beta0*MIDAGE) + phi0*exp(-i*exp(-k*MIDAGE*lambda0)),
+#                          mab0 ~ 1,
+#                          i ~ 1,
+#                          k ~ 1,
+#                          nl = TRUE),
+#                       data = dataS, prior = prior1)
+# 
+#     # Extract fitted dataset + predict model compements using fitted parameters
+#     c_eff_midage1 <- as.data.frame(conditional_effects(fit1)$MIDAGE)
+#     posteriorSum1 <- tidybayes::tidy_draws(fit1) %>%
+#       dplyr::select(starts_with("b_")) %>%
+#       pivot_longer(cols = everything()) %>%
+#       group_by(name) %>%
+#       reframe(aida::summarize_sample_vector(value)[-1])
+# 
+#     posteriorSum1wide <- posteriorSum1 %>%
+#       pivot_wider(names_from = name, values_from = c(2:4))
+# 
+#     dataSn1 <- bind_cols(dataS, posteriorSum1wide) %>%
+#       mutate(mab_MEAN = mean_b_mab0_Intercept*exp(-beta0*MIDAGE),
+#              mab_lo = `95%|_b_mab0_Intercept`*exp(-beta0*MIDAGE),
+#              mab_hi = `|95%_b_mab0_Intercept`*exp(-beta0*MIDAGE),
+#              phi_MEAN = phi0*exp(-mean_b_i_Intercept*exp(-mean_b_k_Intercept*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
+#              phi_lo = phi0*exp(-`95%|_b_i_Intercept`*exp(-`95%|_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
+#              phi_hi = phi0*exp(-`|95%_b_i_Intercept`*exp(-`|95%_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
+#              ninf_MEAN = mx*exp(-w*exp(-r*MIDAGE))*lambda0,
+#              ninf_lo = mx*exp(-w*exp(-r*MIDAGE))*lambda0,
+#              ninf_hi = mx*exp(-w*exp(-r*MIDAGE))*lambda0)
+# 
+#     ### Model 2
+#     prior2 <- prior(normal(1.46, 0.05), nlpar = "i") + # Priors = posteriors from linear model HMCMC
+#       prior(normal(4,0.5), nlpar = "k") +
+#       prior(normal(3,0.54), nlpar = "mab0")+
+#       prior(normal(0.2,0.1), nlpar = "r") +
+#       prior(normal(2,0.5), nlpar = "E") +
+#       prior(normal(0.15,0.02), nlpar = "lambdaB")
+# 
+#     fit2 <- brms::brm(bf(LPS_ME ~ mab0*exp(-beta0*MIDAGE) + phi0*exp(-i*exp(-k*mx*exp(-w*exp(-r*MIDAGE))*lambdaB))-E,
+#                          mab0 ~ 1,
+#                          r ~ 1,
+#                          i ~ 1,
+#                          k ~ 1,
+#                          E ~ 1,
+#                          lambdaB ~ 1,
+#                          nl = TRUE),
+#                       data = dataS, prior = prior2)
+#     c_eff_midage2 <- as.data.frame(conditional_effects(fit2)$MIDAGE)
+#     posteriorSum2 <- tidybayes::tidy_draws(fit2) %>%
+#       dplyr::select(starts_with("b_")) %>%
+#       pivot_longer(cols = everything()) %>%
+#       group_by(name) %>%
+#       reframe(aida::summarize_sample_vector(value)[-1])
+# 
+#     posteriorSum2wide <- posteriorSum2 %>%
+#       pivot_wider(names_from = name, values_from = c(2:4))
+# 
+#     dataSn2 <- bind_cols(dataS, posteriorSum2wide) %>%
+#       mutate(mab_MEAN = mean_b_mab0_Intercept*exp(-beta0*MIDAGE),
+#              mab_lo = `95%|_b_mab0_Intercept`*exp(-beta0*MIDAGE),
+#              mab_hi = `|95%_b_mab0_Intercept`*exp(-beta0*MIDAGE),
+#              phi_MEAN = phi0*exp(-mean_b_i_Intercept*exp(-mean_b_k_Intercept*mx*exp(-w*exp(-r*MIDAGE))*mean_b_lambdaB_Intercept))-mean_b_E_Intercept,
+#              phi_lo = phi0*exp(-`95%|_b_i_Intercept`*exp(-`95%|_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*`95%|_b_lambdaB_Intercept`))-`95%|_b_E_Intercept`,
+#              phi_hi = phi0*exp(-`|95%_b_i_Intercept`*exp(-`|95%_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*`|95%_b_lambdaB_Intercept`))-`|95%_b_E_Intercept`,
+#              ninf_MEAN = mx*exp(-w*exp(-r*MIDAGE))*mean_b_lambdaB_Intercept,
+#              ninf_lo = mx*exp(-w*exp(-r*MIDAGE))*`95%|_b_lambdaB_Intercept`,
+#              ninf_hi = mx*exp(-w*exp(-r*MIDAGE))*`|95%_b_lambdaB_Intercept`)
+# 
+#     fit1 <- add_criterion(fit1, "waic")
+#     fit2 <- add_criterion(fit2, "waic")
+# 
+#     # compare both models
+#     loo_tab <- as.data.frame(round(loo_compare(fit1, fit2, criterion = "waic"),digits=2)) %>%
+#       rownames_to_column()
+#     loo_tabft <- loo_tab %>% flextable()
+#     print(loo_tabft)
+#     
+#     export(dataS, here("data", "6_data", paste0(sep="",name,"dataS.csv")))
+#     export(fit1, here("data", "6_data", paste0(sep="",name,"fit1.RData")))
+#     export(fit2, here("data", "6_data", paste0(sep="",name,"fit2.RData")))
+#     export(c_eff_midage1, here("data", "6_data", paste0(sep="",name,"c_eff_midage1.csv")))
+#     export(c_eff_midage2, here("data", "6_data", paste0(sep="",name,"c_eff_midage2.csv")))
+#     export(dataSn1, here("data", "6_data", paste0(sep="",name,"dataSn1.csv")))
+#     export(dataSn2, here("data", "6_data", paste0(sep="",name,"dataSn2.csv")))
+#     export(loo_tab, here("data", "6_data", paste0(sep="",name,"loo_tab.csv")))
+# 
+# }
+# lapply(names(sites), function(name) model_comp(sites[[name]], name))
+
+
+gg_fit_func <- function(dataS, c_eff_midage){
+  g <- ggplot() +
+  geom_ribbon(aes(x=MIDAGE, ymin=exp(LPS_ME-LPS_SD), ymax=exp(LPS_ME+LPS_SD)), alpha=0.3, fill="red",data=dataS) +
+  geom_ribbon(aes(x=MIDAGE, ymin=exp(lower__), ymax=exp(upper__)), alpha=0.3, fill='blue', data=c_eff_midage) +
+  #geom_point(aes(x=MIDAGE, y=estimate__),fill="blue", data=c_eff_midage) +
+  geom_point(aes(x=MIDAGE, y=exp(LPS_ME)),colour="blue", data=dataS) +
+  theme_bw() +
+  xlab("Age (months)") +
+  ylab("Anti-STm IgG (EU/ml)") +
+  scale_y_log10(labels = prettyNum) +
+  ggtitle("LPS IgG titres by age: model vs data - changing FOI") +
+  scale_x_continuous(breaks = c(seq(0,60,5))) +
+  theme(axis.text=element_text(size=10),
+        axis.title=element_text(size=10,face="bold"),
+        plot.title = element_text(size=10))
+}
+
+gg_ninffuncum <- function(dataSn){
+  gg_cum_ninf<- ggplot(dataSn) +
+    geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo*MIDAGE, ymax=ninf_hi*MIDAGE), alpha=0.3, fill="goldenrod") +
+    geom_point(aes(x=MIDAGE, y=ninf_MEAN*MIDAGE), colour="goldenrod3") +
+    theme_bw() +
+    xlab("Mid-age in months") +
+    ylab("Number of infections") +
+    ggtitle("Number of infections by age") +
+    scale_x_continuous(breaks = c(seq(0,60,5))) +
+    theme(axis.text=element_text(size=10),
+          axis.title=element_text(size=10,face="bold"),
+          plot.title = element_text(size=10))
+}
+
+gg_ninffunc <- function(dataSn){
+  gg_ninf<- ggplot(dataSn) +
+    geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo, ymax=ninf_hi), alpha=0.3, fill="goldenrod") +
+    geom_point(aes(x=MIDAGE, y=ninf_MEAN), colour="goldenrod3") +
+    theme_bw() +
+    xlab("Mid-age in months") +
+    ylab("Number of infections") +
+    ggtitle("Percentage of children with eNTS in each age group") +
+    scale_x_continuous(breaks = c(seq(0,60,5))) +
+    theme(axis.text=element_text(size=10),
+          axis.title=element_text(size=10,face="bold"),
+          plot.title = element_text(size=10))
+}
+
+gg_mab_phi_fun<- function(dataSn){
+  gg_mab_phi<- ggplot(dataSn) +
+    geom_ribbon(aes(x=MIDAGE, ymin=exp(mab_lo), ymax=exp(mab_hi)), col='pink', alpha=0.3) +
+    geom_point(aes(x=MIDAGE, y=exp(mab_MEAN)), col='pink') +
+    geom_ribbon(aes(x=MIDAGE, ymin=exp(phi_lo), ymax=exp(phi_hi)), col='gold', alpha=0.3) +
+    geom_point(aes(x=MIDAGE, y=exp(phi_MEAN)), col='gold') +
+    theme_bw() +
+    xlab("Mid-age in months") +
+    ylab("Anti-STm LPS IgG titers (log)") +
+    scale_y_log10(labels = prettyNum) +
+    ggtitle("Mab and Theta (θ) by age") +
+    scale_x_continuous(breaks = c(seq(0,60,5))) +
+    theme(axis.text=element_text(size=10),
+          axis.title=element_text(size=10,face="bold"),
+          plot.title = element_text(size=10))
+}
+
+no <- c("1", "2")
+co <- c("Malawi", "Kenya", "BF")
+modelLs <- list()
+plotLs <- list()
+plotLsninf <- list()
+plotLsninfcum <- list()
+plotLsmabphi <- list()
+
+for(n in no){
+  for(c in co){
+    modelLs[[c]]$dataS <- import(here("data", "6_data", paste(sep="",c,"dataS.csv")))#
+    modelLs[[n]][[c]]$fit <- import_list(here("data", "6_data", paste(sep="",c,"fit",n,".RData")))#
+    modelLs[[n]][[c]]$c_eff_midage <- import(here("data", "6_data", paste(sep="",c,"c_eff_midage",n,".csv")))#
+    modelLs[[n]][[c]]$dataSn <- import(here("data", "6_data", paste(sep="",c,"dataSn",n,".csv")))#
+    plotLs[[n]][[c]] <- gg_fit_func(modelLs[[c]]$dataS, modelLs[[n]][[c]]$c_eff_midage)
+    plotLsninf[[n]][[c]] <- gg_ninffunc(modelLs[[n]][[c]]$dataSn)
+    plotLsninfcum[[n]][[c]] <- gg_ninffuncum(modelLs[[n]][[c]]$dataSn)
+    plotLsmabphi[[n]][[c]] <- gg_mab_phi_fun(modelLs[[n]][[c]]$dataSn)
+  }
+}
 ##load data
 #data <- import(here("data","6_data", "sero_data_agegroup_mth.csv"))   ## serology data
 data <- import(here("data","6_data", "Malawi_STmIgG_master.csv")) %>%
   mutate(AGEGROUP_mth = cut(age_calc_months, breaks = seq(0,60,1)),
          AGE = age_calc_months) 
-#rename(EU_all.sero = EU_all.sero)## serology data
-# dataK <- import(here("Data","VacciNTS", "kenya_STmIgG_master.csv"))   ## serology data
-# dataB <- import(here("Data","VacciNTS", "BF_STmIgG_master.csv"))   ## serology data
-dataS <- data %>% 
-  group_by(AGEGROUP_mth) %>%
-  summarise(N=n(),
-            MIDAGE=mean(AGE, na.rm = T), ##keep the actual mean age of the groups
-            LPS_ME=mean(log(EU_all.sero),na.rm=T),
-            LPS_SD=sd(log(EU_all.sero),na.rm=T)) %>% 
-  ungroup() %>% 
-  arrange(MIDAGE)
 
 data3 <- data %>% 
   group_by(AGEGROUP_3mth) %>%
@@ -231,7 +438,7 @@ flextable(data3) %>%
   ) %>% 
   autofit()
 
-total <- dataS %>% 
+total <- data %>% 
   summarise(n())
 ```
 
@@ -241,56 +448,10 @@ total <- dataS %>%
 
 Cross-sectional samples were analysed for `{r} total` Malawian children 0-60 months recruited in the SAiNTS study, recruited between 9th January 2021 and 30th May 2022. Antibody responses to *Salmonella* typhimurium (STm) O-antigen IgG were used to fit the model. The geometric mean concentration (GMC) of STm OAg IgG for each 3 month age group is shown in @tbl-serodatsum. The model was fitted to GMC for 1 month age groups (0 - 60 months), allowing the model to find the values of i, k and mab that best fit the observed data. The priors for i, k, mab were based on informative priors estimated from previous data [@nyirenda_sequential_2014]?? For some level of restricted prior.
 
-### Model 1: Constant force of infection
 
-Model fitting to the observed antibody data is shown in @fig-chains1, tbl-sumM1 @fig-fit1. The posterior chains are shown in panel A @fig-chains1.
-
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre",fig.height=7, fig.width = 5.5, out.width = "6in"}
+```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre",fig.height=5, fig.width = 5.5, out.width = "6in"}
 #| fig-cap: Model 1 outputs using Markov Chain Monte Carlo (MCMC) to estimate model parameters, posterior chains and posterior distributions of parameters i, k, and mab
-#| label: fig-chains1
-
-## Set fixed parameters
-dataS$mx=1  # upper limit of new infections (cumulative) by age 60 months = 40 if 1 infection every 6 weeks on average across cohort - may need to adjust for age dist
-dataS$r=0.2 # exponential phase where enter high feco-oral transmission at weaning/ crawling age  
-dataS$w=3   # age in months before before enter exponential phase (x-axis displacement) - weaning 
-dataS$phi0<- max(log(data$EU_all.sero),na.rm=T) ##prior:: the max you may get from the data
-dataS$beta0<- 0.5 ##pri
-dataS$lambda0<- 0.11 ##pri
-
-## Set priors - these are from previous iterations of the model to get more informative priors - tuning the chains
-prior1 <- prior(normal(2.75,0.5), nlpar = "i") +
-  prior(normal(1,0.5), nlpar = "k") +
-  prior(normal(5,1), nlpar = "mab0")
-
-# Fit model using brms
-fit1 <- brms::brm(bf(LPS_ME ~ mab0*exp(-beta0*MIDAGE) + phi0*exp(-i*exp(-k*MIDAGE*lambda0)),
-               mab0 ~ 1,
-               i ~ 1,
-               k ~ 1,
-               nl = TRUE),
-            data = dataS, prior = prior1)
-
-# Extract fitted dataset + predict model compements using fitted parameters
-c_eff_midage1 <- as.data.frame(conditional_effects(fit1)$MIDAGE)
-posteriorSum1 <- tidybayes::tidy_draws(fit1) %>%  
-  dplyr::select(starts_with("b_")) %>% 
-  pivot_longer(cols = everything()) %>% 
-  group_by(name) %>% 
-  reframe(aida::summarize_sample_vector(value)[-1])
-
-posteriorSum1wide <- posteriorSum1 %>% 
-  pivot_wider(names_from = name, values_from = c(2:4))
-
-dataSn1 <- bind_cols(dataS, posteriorSum1wide) %>% 
-  mutate(mab_MEAN = mean_b_mab0_Intercept*exp(-beta0*MIDAGE),
-         mab_lo = `95%|_b_mab0_Intercept`*exp(-beta0*MIDAGE),
-         mab_hi = `|95%_b_mab0_Intercept`*exp(-beta0*MIDAGE),
-         phi_MEAN = phi0*exp(-mean_b_i_Intercept*exp(-mean_b_k_Intercept*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
-         phi_lo = phi0*exp(-`95%|_b_i_Intercept`*exp(-`95%|_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
-         phi_hi = phi0*exp(-`|95%_b_i_Intercept`*exp(-`|95%_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*lambda0)),
-         ninf_MEAN = mx*exp(-w*exp(-r*MIDAGE))*lambda0,
-         ninf_lo = mx*exp(-w*exp(-r*MIDAGE))*lambda0,
-         ninf_hi = mx*exp(-w*exp(-r*MIDAGE))*lambda0)
+#| label: fig-posteriors1
 
 theme_set(
   theme_base(base_size = 12) +
@@ -303,82 +464,52 @@ theme_set(
     )
 )
 # Summary of posterior distributions
-plot(fit1)
+dataS <- modelLs$Malawi$dataS
+dataSn1 <- modelLs$`1`$Malawi$dataSn
+dataSn2 <- modelLs$`2`$Malawi$dataSn
+c_eff_midage1 <- modelLs$`1`$Malawi$c_eff_midage
+c_eff_midage2 <- modelLs$`2`$Malawi$c_eff_midage
+fit1 <- modelLs$`1`$Malawi$fit
+fit2 <- modelLs$`2`$Malawi$fit
 
-i_mean <- round(posteriorSum1wide$mean_b_i_Intercept, digits=2)
-i_95CI <- paste0(sep="","(", round(posteriorSum1wide$`95%|_b_i_Intercept`,digits=2)," - ", round(posteriorSum1wide$`|95%_b_i_Intercept`,digits=2),")")
-k_mean <- round(posteriorSum1wide$mean_b_k_Intercept, digits=2)
-k_95CI <-  paste0(sep="","(", round(posteriorSum1wide$`95%|_b_k_Intercept`,digits=2)," - ", round(posteriorSum1wide$`|95%_b_k_Intercept`,digits=2),")")
-mab_mean <- round(posteriorSum1wide$mean_b_mab0_Intercept, digits=2)
-mab_95CI <-paste0(sep="","(", round(posteriorSum1wide$`95%|_b_mab0_Intercept`,digits=2)," - ", round(posteriorSum1wide$`|95%_b_mab0_Intercept`,digits=2),")")
+i_mean1 <- round(dataSn2$mean_b_i_Intercept, digits=2)[1] 
+i_95CI1 <- paste0(sep="","(", round(dataSn1$`95%|_b_i_Intercept`,digits=2)," - ", round(dataSn1$`|95%_b_i_Intercept`,digits=2),")")[1]
+k_mean1 <- round(dataSn1$mean_b_k_Intercept, digits=2)[1]
+k_95CI1 <-  paste0(sep="","(", round(dataSn1$`95%|_b_k_Intercept`,digits=2)," - ", round(dataSn1$`|95%_b_k_Intercept`,digits=2),")")[1]
+mab_mean1 <- round(dataSn1$mean_b_mab0_Intercept, digits=2)[1]
+mab_95CI1 <-paste0(sep="","(", round(dataSn1$`95%|_b_mab0_Intercept`,digits=2)," - ", round(dataSn1$`|95%_b_mab0_Intercept`,digits=2),")")[1]
 
+i_mean2 <- round(dataSn2$mean_b_i_Intercept, digits=2)[1]
+i_95CI2 <- paste0(sep="","(", round(dataSn2$`95%|_b_i_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_i_Intercept`,digits=2),")")[1]
+k_mean2 <- round(dataSn2$mean_b_k_Intercept, digits=2)[1]
+k_95CI2 <-  paste0(sep="","(", round(dataSn2$`95%|_b_k_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_k_Intercept`,digits=2),")")[1]
+mab_mean2 <- round(dataSn2$mean_b_mab0_Intercept, digits=2)[1]
+mab_95CI2 <-paste0(sep="","(", round(dataSn2$`95%|_b_mab0_Intercept`,digits=2)," - ", round(dataSn2$`|95%_b_mab0_Intercept`,digits=2),")")[1]
+
+summary(fit1$fit)
+postsum1 <- as.data.frame(fit1$fit) %>% ## posteriors
+  select(1:5) %>% 
+  pivot_longer(cols = everything(), names_to = "variable", values_to = "value")
+gg_hist <- ggplot(postsum1, aes(x=value))+
+      geom_histogram(fill="lightblue",colour="black",lwd=0.2)+
+      facet_wrap(~variable, nrow = 7, scales = "free") +
+      labs(x = "Value", y = "Count")
+chains_plot <- as_draws_df(fit1$fit) %>% 
+  mcmc_trace(pars = vars(b_mab0_Intercept:sigma), facet_args = list(ncol = 1, strip.position = "left"))+
+  #scale_color_pomological() +
+  labs(title = "Trace plots")#+
+  #theme_pomological_fancy(base_family = "Marck Script") 
+plot_grid(gg_hist, chains_plot,ncol=2)
 ```
 
-The posterior distributions were i, k and mab are shown in @fig-chains1 panels B-D; the mean for i was `{r} i_mean`, with 95% credible intervals (CI) `{r} i_95CI`, k mean was `{r} k_mean` & 95% CI `{r} k_95CI`, and mab mean was `{r} mab_mean` & sd`{r} mab_95CI`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit1
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, ft.align = "centre", ft.width = 5, out.width = "5.5in"}
-#| fig-cap: Model 1 fit for model components mab and theta
-#| label: fig-phi1
-#| 
-gg_mab_phi1<- ggplot(dataSn1) +
-  geom_ribbon(aes(x=MIDAGE, ymin=exp(mab_lo), ymax=exp(mab_hi)), col='pink', alpha=0.3) +
-  geom_point(aes(x=MIDAGE, y=exp(mab_MEAN)), col='pink') +
-  geom_ribbon(aes(x=MIDAGE, ymin=exp(phi_lo), ymax=exp(phi_hi)), col='gold', alpha=0.3) +
-  geom_point(aes(x=MIDAGE, y=exp(phi_MEAN)), col='gold') +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Anti-STm LPS IgG titers (log)") +
-  scale_y_log10(labels = prettyNum) +
-  ggtitle("Mab and Theta (θ) by age") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-#gg_mab_phi1
-```
+### Model 1: Constant force of infection
 
+Model fitting to the observed antibody data is shown in @fig-posteriors1 , @tbl-serodatsum, @fig-fit1. The posterior chains are shown in panel A @fig-posteriors1. The posterior distributions were i, k and mab are shown in @fig-chains1 panels B-D; the mean for i was `{r} i_mean1`, with 95% credible intervals (CI) `{r} i_95CI1`, k mean was `{r} k_mean1` & 95% CI `{r} k_95CI1`, and mab mean was `{r} mab_mean1` & sd`{r} mab_95CI1`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit1
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, ft.align = "centre", ft.width = 5, out.width = "5.5in"}
-#| tbl-cap: Model 1 outputs; Average number of infections resulting in STm IgG response
-#| label: tbl-sumM1
+### Model 2: Changing force of infection with age
 
-ninfM1 <- dataSn1 %>% 
-  #subset(type="model", c(MIDAGE, ninf_MEAN)) %>% 
-  mutate(age1y = cut(MIDAGE, breaks =c(0,12,24,36,48,60))) %>% 
-  group_by(age1y) %>% 
-  summarise(mean = round(mean(ninf_MEAN, na.rm=T), digits=2)) %>% 
-  ungroup() %>% 
-  flextable()
-ninfM1
-# ninfM1ft <- flextable(ninfM1)
-# ninfM1ft
-
-gg_ninf1<- ggplot(dataSn1) +
-  geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo, ymax=ninf_hi), alpha=0.3, fill="goldenrod") +
-  geom_point(aes(x=MIDAGE, y=ninf_MEAN), colour="goldenrod3") +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Number of infections") +
-  ggtitle("Percentage of children with eNTS in each age group") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-#gg_ninf1
-
-gg_cum_ninf1<- ggplot(dataSn1) +
-  geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo*MIDAGE, ymax=ninf_hi*MIDAGE), alpha=0.3, fill="goldenrod") +
-  geom_point(aes(x=MIDAGE, y=ninf_MEAN*MIDAGE), colour="goldenrod3") +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Number of infections") +
-  ggtitle("Number of infections by age") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-#gg_cum_ninf1
-```
+The posterior distributions were i, k and mab are shown in @fig-posteriors2 panels B-D; the mean for i was `{r} i_mean2`, with 95% credible intervals (CI) `{r} i_95CI2`, k mean was `{r} k_mean2` & 95% CI `{r} k_95CI2`, and mab mean was `{r} mab_mean2` & sd`{r} mab_95CI2`. The model fit for the individual model components mab (maternal antibody decay) and phi (acquisition of natural immunity following eNTS exposure) are shown in @fig-fit2
 
 \newpage
 
@@ -388,24 +519,15 @@ gg_cum_ninf1<- ggplot(dataSn1) +
 \KOMAoptions{usegeometry, paper=landscape,pagesize}
 \recalctypearea
 ```
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=7, fig.width = 8, out.width = "8.5in"}
+```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=7, fig.width = 7.5, out.width = "8in"}
 #| fig-cap: Model 1 fit, blue points are fitted GMC by age band, blue shaded area are 95% prediction intervals, pink points are observed GMC, pink shaded area are 95% prediction intervals.
+#| label: fig-fit1
 
-gg_fit1<- ggplot() +
-  geom_ribbon(aes(x=MIDAGE, ymin=exp(LPS_ME-LPS_SD), ymax=exp(LPS_ME+LPS_SD)), alpha=0.3, fill="red",data=dataS) +
-  geom_ribbon(aes(x=MIDAGE, ymin=exp(lower__), ymax=exp(upper__)), alpha=0.3, fill='blue', data=c_eff_midage1) +
-  #geom_point(aes(x=MIDAGE, y=estimate__),fill="blue", data=c_eff_midage) +
-  geom_point(aes(x=MIDAGE, y=exp(LPS_ME)),colour="blue", data=dataS) +
-  theme_bw() +
-  xlab("Age (months)") +
-  ylab("Anti-STm IgG EU/ml") +
-  scale_y_log10(labels = prettyNum) +
-  ggtitle("LPS IgG titres by age: model vs data - changing FOI") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-#gg_fit
+ninfM1 <- gg_ninffunc(dataSn1)
+gg_ninf1<- gg_ninffunc(dataSn1)
+gg_cum_ninf1<- gg_ninffuncum(dataSn1)
+gg_mab_phi1<- gg_mab_phi_fun(dataSn1)
+gg_fit1<- gg_fit_func(dataS, c_eff_midage1)
 
 plot1 <- plot_grid(gg_mab_phi1, gg_ninf1,gg_cum_ninf1, nrow=1)
 print(plot_grid(plot1, gg_fit1, nrow=2, labels="AUTO", rel_heights=c(1,2)))
@@ -417,202 +539,113 @@ print(plot_grid(plot1, gg_fit1, nrow=2, labels="AUTO", rel_heights=c(1,2)))
 <!-- changing the orientation to portrait --------------------------------- -->
 
 ```{=tex}
-\KOMAoptions{usegeometry, paper=portrait,pagesize}
+\KOMAoptions{paper=portrait,pagesize}
 \recalctypearea
 ```
-
-### Model 2: Changing force of infection with age
-
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=5, fig.width = 5, out.width = "5.5in"}
+```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=6, fig.width = 5, out.width = "5.5in"}
 #| fig-cap: Model 2 outputs using Markov Chain Monte Carlo (MCMC) to estimate model parameters; posterior chains and posterior distributions of parameters i, k, and mab
-#| label: fig-chains2
-
-prior2 <- prior(normal(1.1, 4.95), nlpar = "i") +
-  prior(normal(8.61,5.1), nlpar = "k") +
-  prior(normal(6.27,1.76), nlpar = "mab0") +
-  prior(normal(8.36,1.49), nlpar = "lambdaB")
-
-fit2 <- brm(bf(LPS_ME ~ mab0*exp(-beta0*MIDAGE) + phi0*exp(-i*exp(-k*mx*exp(-w*exp(-r*MIDAGE))*lambdaB)), 
-               mab0 ~ 1,
-               lambdaB ~ 1,
-               i ~ 1,
-               k ~ 1,
-               nl = TRUE),
-            data = dataS, prior = prior2)
-c_eff_midage2 <- as.data.frame(conditional_effects(fit2)$MIDAGE)
-posteriorSum2 <- tidybayes::tidy_draws(fit2) %>%  
-  dplyr::select(starts_with("b_")) %>% 
-  pivot_longer(cols = everything()) %>% 
-  group_by(name) %>% 
-  reframe(aida::summarize_sample_vector(value)[-1])
-
-posteriorSum2wide <- posteriorSum2 %>% 
-  pivot_wider(names_from = name, values_from = c(2:4))
-
-dataSn2 <- bind_cols(dataS, posteriorSum2wide) %>% 
-  mutate(mab_MEAN = mean_b_mab0_Intercept*exp(-beta0*MIDAGE),
-         mab_lo = `95%|_b_mab0_Intercept`*exp(-beta0*MIDAGE),
-         mab_hi = `|95%_b_mab0_Intercept`*exp(-beta0*MIDAGE),
-         phi_MEAN = phi0*exp(-mean_b_i_Intercept*exp(-mean_b_k_Intercept*mx*exp(-w*exp(-r*MIDAGE))*mean_b_lambdaB_Intercept)),
-         phi_lo = phi0*exp(-`95%|_b_i_Intercept`*exp(-`95%|_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*`95%|_b_lambdaB_Intercept`)),
-         phi_hi = phi0*exp(-`|95%_b_i_Intercept`*exp(-`|95%_b_k_Intercept`*mx*exp(-w*exp(-r*MIDAGE))*`|95%_b_lambdaB_Intercept`)),
-         ninf_MEAN = mx*exp(-w*exp(-r*MIDAGE))*mean_b_lambdaB_Intercept,
-         ninf_lo = mx*exp(-w*exp(-r*MIDAGE))*`95%|_b_lambdaB_Intercept`,
-         ninf_hi = mx*exp(-w*exp(-r*MIDAGE))*`|95%_b_lambdaB_Intercept`)
+#| label: fig-posteriors2
 
 # plot posteriors
-plot(fit2)
-
+summary(fit2$fit)
+postsum2 <- as.data.frame(fit2$fit) %>% ## posteriors
+  select(1:7) %>% 
+  pivot_longer(cols = everything(), names_to = "variable", values_to = "value")
+gg_hist <- ggplot(postsum2, aes(x=value))+
+      geom_histogram(fill="lightblue",colour="black",lwd=0.2)+
+      facet_wrap(~variable, nrow = 7, scales = "free") +
+      labs(x = "Value", y = "Count")
+chains_plot <- as_draws_df(fit2$fit) %>% 
+  mcmc_trace(pars = vars(b_mab0_Intercept:sigma), facet_args = list(ncol = 1, strip.position = "left"))+
+  #scale_color_pomological() +
+  labs(title = "Trace plots") #+
+  #theme_pomological_fancy(base_family = "Marck Script") 
+plot_grid(gg_hist, chains_plot,ncol=2)
 ```
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, ft.align = "centre", ft.width = 5, out.width = "5.5in"}
-#| fig-cap: Model 2 fit for model components mab and theta
-#| label: fig-phi2
-#| 
-gg_mab_phi2<- ggplot(dataSn2) +
-  geom_ribbon(aes(x=MIDAGE, ymin=mab_lo, ymax=mab_hi), col='pink', alpha=0.3) +
-  geom_point(aes(x=MIDAGE, y=mab_MEAN), col='pink') +
-  geom_ribbon(aes(x=MIDAGE, ymin=phi_lo, ymax=phi_hi), col='gold', alpha=0.3) +
-  geom_point(aes(x=MIDAGE, y=phi_MEAN), col='gold') +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Anti-STm LPS IgG titers (log)") +
-  ggtitle("Mab and Theta (θ) by age") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-# gg_mab_phi2
+\newpage
+
+<!-- changing the orientation to landscape --------------------------------- -->
+
+```{=tex}
+\KOMAoptions{paper=landscape,pagesize}
+\recalctypearea
 ```
-
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, ft.align = "centre", ft.width = 5, out.width = "5.5in"}
-#| fig-cap: Model 2 fit for number of infections by age
-#| label: tbl-ninf2
-
-ninfM2 <- dataSn2 %>% 
-  #subset(type="model", c(MIDAGE, ninf_MEAN)) %>% 
-  mutate(age1y = cut(MIDAGE, breaks =c(0,12,24,36,48,60))) %>% 
-  group_by(age1y) %>% 
-  summarise(mean = round(mean(ninf_MEAN, na.rm=T), digits=2)) %>% 
-  ungroup() %>% 
-  flextable()
-ninfM2
-
-gg_ninf2<- ggplot(dataSn2) +
-  geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo, ymax=ninf_hi), alpha=0.3, fill="goldenrod") +
-  geom_point(aes(x=MIDAGE, y=ninf_MEAN), colour="goldenrod3") +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Number of infections") +
-  ggtitle("Percentage of children with eNTS in each age group") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-# gg_ninf2
-
-gg_cum_ninf2<- ggplot(dataSn2) +
-  geom_ribbon(aes(x=MIDAGE, ymin=ninf_lo*MIDAGE, ymax=ninf_hi*MIDAGE), alpha=0.3, fill="goldenrod") +
-  geom_point(aes(x=MIDAGE, y=ninf_MEAN*MIDAGE), colour="goldenrod3") +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Number of infections") +
-  ggtitle("Number of infections by age") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-# gg_cum_ninf2
-```
-
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=6, fig.width = 5, out.width = "5.5in"}
+```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=7, fig.width = 8, out.width = "8.5in"}
 #| fig-cap: Model fit, blue points are fitted GMC by age band, blue shaded area are 95% prediction intervals, pink points are observed GMC, pink shaded area are 95% prediction intervals.
 #| label: fig-fit2
 
-gg_fit2<- ggplot() +
-  geom_ribbon(aes(x=MIDAGE, ymin=LPS_ME-LPS_SD, ymax=LPS_ME+LPS_SD), alpha=0.3, fill="red",data=dataS) +
-  geom_ribbon(aes(x=MIDAGE, ymin=lower__, ymax=upper__), alpha=0.3, fill='blue', data=c_eff_midage2) +
-  #geom_point(aes(x=MIDAGE, y=estimate__),fill="blue", data=c_eff_midage) +
-  geom_point(aes(x=MIDAGE, y=LPS_ME),colour="blue", data=dataS) +
-  theme_bw() +
-  xlab("Mid-age in months") +
-  ylab("Anti-STm LPS IgG titers (log)") +
-  ggtitle("LPS IgG titres by age: model vs data - changing FOI") +
-  scale_x_continuous(breaks = c(seq(0,60,5))) +
-  theme(axis.text=element_text(size=10),
-        axis.title=element_text(size=10,face="bold"),
-        plot.title = element_text(size=10))
-#gg_fit
+ninfM2 <- gg_ninffunc(dataSn2)
+gg_ninf2<- gg_ninffunc(dataSn2)
+gg_cum_ninf2<- gg_ninffuncum(dataSn2)
+gg_mab_phi2<- gg_mab_phi_fun(dataSn2)
+gg_fit2<- gg_fit_func(dataS, c_eff_midage2)
 
-plot2 <- plot_grid(gg_mab_phi2, gg_ninf2, gg_cum_ninf2, nrow=1)
-print(plot_grid(plot2, gg_fit2, nrow=2, labels="AUTO", rel_heights=c(1,2)))
+plot1 <- plot_grid(gg_mab_phi2, gg_ninf2,gg_cum_ninf2, nrow=1)
+print(plot_grid(plot1, gg_fit2, nrow=2, labels="AUTO", rel_heights=c(1,2)))
 ```
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=6, fig.width = 5, out.width = "5.5in"}
-#| fig-cap: Model comparison using leave one out
-#| label: fig-loo
+\newpage
+
+```{r echo=FALSE, warning=FALSE, message=FALSE, ft.align = "centre", ft.height=6, ft.width = 5, out.width = "5.5in"}
+#| tbl-cap: Model comparison using leave one out
+#| label: tbl-loo
 
 # loo <- loo(fit1, fit2) 
 # loo_tab <- as.data.frame(round(loo$diffs, digits = 2))
 # loo_tab %>% gt()
-
-fit1 <- add_criterion(fit1, "waic")
-fit2 <- add_criterion(fit2, "waic")
-# compare both models
-loo_tab <- as.data.frame(round(loo_compare(fit1, fit2, criterion = "waic"),digits=2)) %>% 
-  rownames_to_column()
-loo_tab %>% gt()
-
+# fit1 <- add_criterion(fit1$fit, "waic")
+# fit2 <- add_criterion(fit2, "waic")
+# 
+# # compare both models
+# loo_tab <- as.data.frame(round(loo_compare(fit1, fit2, criterion = "waic"),digits=2)) %>% 
+#   rownames_to_column()
+# loo_tab %>% flextable()
 ```
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=7, fig.width = 5, out.width = "5.5in"}
-#| fig-cap: Model fit across three sub-Saharan African sites
-#| label: fig-fitSites
-# malawi_modelfit <- import(here("data", "6_data", "Malawi_model_vs_datam2.csv"))
-# kenya_modelfit <- import(here("data", "6_data", "Kenya_model_vs_datam2.csv"))
-# BF_modelfit <- import(here("data", "6_data", "BF_model_vs_datam1.csv"))
-# 
-# gg_fitKen<- ggplot(kenya_modelfit) +
-#   geom_ribbon(aes(x=MIDAGE, ymin=MEAN-SD, ymax=MEAN+SD, fill=type), alpha=0.3) +
-#   geom_point(aes(x=MIDAGE, y=MEAN, col=type)) +
-#   theme_bw() +
-#   xlab("Mid-age in months") +
-#   ylab("Anti-STm LPS IgG titers (log)") +
-#   ggtitle("Kenya: LPS IgG titres by age (Model 2)") +
-#   scale_x_continuous(breaks = c(seq(0,60,5))) +
-#   theme(axis.text=element_text(size=10),
-#         axis.title=element_text(size=10,face="bold"),
-#         plot.title = element_text(size=10))
-# 
-# gg_fitBF<- ggplot(BF_modelfit) +
-#   geom_ribbon(aes(x=MIDAGE, ymin=MEAN-SD, ymax=MEAN+SD, fill=type), alpha=0.3) +
-#   geom_point(aes(x=MIDAGE, y=MEAN, col=type)) +
-#   theme_bw() +
-#   xlab("Mid-age in months") +
-#   ylab("Anti-STm LPS IgG titers (log)") +
-#   ggtitle("BF: LPS IgG titres by age (Model 2)") +
-#   scale_x_continuous(breaks = c(seq(0,60,5))) +
-#   theme(axis.text=element_text(size=10),
-#         axis.title=element_text(size=10,face="bold"),
-#         plot.title = element_text(size=10))
-# 
-# #gg_fit
-# # ggsave(file=here("Outputs", "LPS_Ab", "LPS_Ab_fit_change_FOI_fit_lambda.png"), height = 7, width = 12)
-# print(plot_grid(gg_fit2, gg_fitKen, gg_fitBF, nrow=3, labels="AUTO"))
 ```
-
-```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.width = 5, out.width = "5.5in"}
-#| tbl-cap: Model diagnostics
-#| label: fig-diagn
-# comp_all <- import(here("data", "6_data", "comp_all.csv")) 
-# comp_all %>% 
+```{r echo=FALSE, warning=FALSE, message=FALSE, ft.align = "centre", ft.height=6, ft.width = 5, out.width = "5.5in"}
+#| tbl-cap: Model 3 fit for number of infections by age
+#| label: tbl-ninfall
+#| 
+# ninf_all <- ninfM1 %>% 
+#   left_join(ninfM2) %>% 
 #   gt()
+#ninf_all
+```
 
+
+```{r echo=FALSE, warning=FALSE, message=FALSE, ft.align = "centre", ft.height=6, ft.width = 5, out.width = "5.5in"}
+#| tbl-cap: Model comparison using leave one out
+#| label: tbl-sites
+### Functions to run models and comparisons are in seromultilevel modelling project
+loo_all <- import(here("data", "6_data","loo_all.csv"))
+loo_all %>% flextable()
+```
+
+```{r echo=FALSE, warning=FALSE, message=FALSE, results=FALSE, fig.align = "centre", fig.height=7, fig.width = 8, out.width = "8.5in"}
+#| fig-cap: Model fit, blue points are fitted GMC by age band, blue shaded area are 95% prediction intervals, pink points are observed GMC, pink shaded area are 95% prediction intervals.
+#| label: fig-fitsites
+#plot_ls <- list()
+
+panel1 <- do.call("plot_grid", c(plotLs$`2`, ncol=2, labels="AUTO", label_size=8))
+print(panel1)
+
+```
+
+\newpage
+
+<!-- changing the orientation to portrait --------------------------------- -->
+
+```{=tex}
+\KOMAoptions{paper=portrait,pagesize}
+\recalctypearea
 ```
 
 Model 2 was selected as the best fit model, supporting the hypothesis that the relationship of exposure to eNTS is consistent with a changing (sigmoidal) FOI with age, as reflected in O4 OAg IgG responses in children. This model estimated that on average at birth children were experiencing 0.2 (0.18 – 0.22) eNTS average infections capable of inducing a serotype specific serological response, increasing to 2 (95% CI 1.1 to 3.0) by 6 months of age and 4 (95% CI 2.1 to 5.7) by 12 months of age, plateauing at 5 (95% CI 2.2 to 7.1) eNTS infections cumulatively by age 20 - 60 months.
 
 ## Models for other sites
+
 
 ## Discussion
 
